# ENetzwerk

./: .gitignore  CMakeLists.txt  ENetzwerk.cbp  ENetzwerk.depend  ENetzwerk.layout  Makefile  Node.cpp  README  README.md  config.yaml  main.cpp
docs/: Neues Textdokument.txt  Pflichtenheft_Patrick_Rezmer.docx
lib/NodesEdges/: Bauteil.cpp  Bauteil.h  CMakeLists.txt  Edge.h  Graph.cpp  Graph.h  Node.cpp  Node.h  main.cpp
lib/berechnungen/: CMakeLists.txt  kondensator.cpp  kondensator.h  netzanalyse.cpp  netzanalyse.h  spule.cpp  spule.h  test.cpp  widerstand.cpp  widerstand.h
